src/partials/views/_speeches.sass
/* ... */
    width       : 0
    content     : ''
    border-width: $chatroom_messageArrowSize $chatroom_messageArrowSize $chatroom_messageArrowSize 0
    border-color: transparent #fff
    border-style: solid

.ts.speeches .speech.pointing .content:before,
.ts.speeches .group.pointing .speech .content:before
    display     : block
    position    : absolute
    top         : $chatroom_messageArrowFillTop
    bottom      : auto
    left        : -#{$chatroom_messageArrowFillDistance}
    width       : 0
    content     : ""
    border-width: $chatroom_messageArrowBorderSize $chatroom_messageArrowBorderSize $chatroom_messageArrowBorderSize 0
    border-color: transparent lighten(#808080, 40%)
    border-style: solid

//-------------------//
//     Borderless
//-------------------//

.ts.speeches .speech.borderless .content,
.ts.speeches .group.borderless .speech .content
    box-shadow    : none
    border        : 0
    padding-top   : 0
    padding-bottom: 0

//-------------------//
//       Image
//-------------------//

.ts.speeches .speech .content .image
    overflow: hidden
    margin  : 0 -#{$chatroom_messageHorizontalPadding}

.ts.speeches .speech .content .image img
    vertical-align: top
    width         : 100%

.ts.speeches .speech .content .author + .image
    margin-top: #{$chatroom_messageVerticalPadding}

.ts.speeches .speech .content .image + .text
    margin-top: #{$chatroom_messageVerticalPadding}

.ts.speeches .speech .content .image:first-child
    margin-top             : -#{$chatroom_messageVerticalPadding}
    border-top-left-radius : $chatroom_messageBorderRadius
    border-top-right-radius: $chatroom_messageBorderRadius

.ts.speeches .speech .content .image:last-child
    margin-bottom             : -#{$chatroom_messageVerticalPadding}
    border-bottom-left-radius : $chatroom_messageBorderRadius
    border-bottom-right-radius: $chatroom_messageBorderRadius

.ts.speeches .speech .content .image:only-child
    margin       : -#{$chatroom_messageVerticalPadding} -#{$chatroom_messageHorizontalPadding}
    border-radius: $chatroom_messageBorderRadius

.ts.speeches .speech.circular .content .image:only-child
    border-radius: $chatroom_messageCircularBorderRadius

//-------------------//
//      Circular
//-------------------//

.ts.speeches .speech.circular .content,
.ts.speeches .group.circular .speech .content
    border-radius: $chatroom_messageCircularBorderRadius
    padding-left : $chatroom_messageCircularVerticalPadding
    padding-right: $chatroom_messageCircularVerticalPadding

//-------------------//
//        Meta
//-------------------//

.ts.speeches .speech .meta
    margin-left: $chatroom_messageHorizontalPadding
    margin-top : $chatroom_messageMetaMarginTop
    font-size  : $relativeTiny
    opacity    : $chatroom_messageMetaOpacity
    text-align : left
    clear      : both
    display    : flex

.ts.speeches .speech .meta > *:not(:last-child)
    margin-right: $chatroom_messageMetaSpacing

// Inline Meta
.ts.speeches .speech .content .meta
    display    : inline-flex
    margin-left: $chatroom_messageInlineMetaDistanceToText
    bottom     : $chatroom_messageInlineMetaBottomOffset
    line-height: 0
    float      : right

.ts.speeches .speech .content > .meta
    bottom     : $chatroom_messageInBubbleMetaBottomOffset
    line-height: $chatroom_messageInBubbleMetaLineHeight

.ts.speeches .speech .content .meta .item:before
    line-height: 0

//-------------------//
//    Dotted Meta
//-------------------//

.ts.speeches .speech .meta.middoted > *,
.ts.speeches .speech .meta.bulleted > *
    margin-right: 0
.ts.speeches .speech .meta.middoted > *:not(:first-child):before
    +extend(is-dot)

    margin-left : $chatroom_messageMetaSpacing / 1.5
    margin-right: $chatroom_messageMetaSpacing / 1.5
    content     : '·'
.ts.speeches .speech .meta.bulleted > *:not(:first-child):before
    +extend(is-dot)

    margin-left : $chatroom_messageMetaSpacing / 1.5
    margin-right: $chatroom_messageMetaSpacing / 1.5
    content     : '•'

//-------------------//
//    Right Message
//-------------------//

.ts.speeches .speech.right,
.ts.speeches .group.right .speech
    text-align    : right
    flex-direction: row-reverse
    align-self    : flex-end

/** Content */
.ts.speeches .speech.right .content,
.ts.speeches .group.right .speech .content
    margin-right: $chatroom_messageNoAvatarDistance
    margin-left : 0

/** Author */
.ts.speeches .speech.right > .author,
.ts.speeches .group.right .speech > .author
    padding-right: calc((#{$chatroom_avatarSizeCalc}) + #{$chatroom_messageArrowDistance} + #{$chatroom_messageArrowSize})
    text-align   : right

/** Meta */
.ts.speeches .speech.right > .meta,
.ts.speeches .group.right .speech > .meta
    padding-right: calc((#{$chatroom_avatarSizeCalc}) + #{$chatroom_messageArrowDistance} + #{$chatroom_messageArrowSize})
    text-align   : right

/** Content with avatar */
.ts.speeches .speech.right .avatar + .content,
.ts.speeches .group.right .speech .avatar + .content
    margin-right: $chatroom_messageDistance

/** Arrow border */
.ts.speeches .speech.right.pointing .content:after,
.ts.speeches .group.right.pointing .speech .content:after
    right       : -#{$chatroom_messageArrowDistance}
    bottom      : auto
    left        : auto
    border-width: $chatroom_messageArrowSize 0 $chatroom_messageArrowSize $chatroom_messageArrowSize

/** Fill arrow */
.ts.speeches .speech.right.pointing .content:before,
.ts.speeches .group.right.pointing .speech .content:before
    right       : -#{$chatroom_messageArrowFillDistance}
/* ... */

